typescript/checker/tests/conformance/es6/Symbols/symbolType15.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            75,
        ),
        ctxt: #0,
    },
    left: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    25,
                ),
                hi: BytePos(
                    31,
                ),
                ctxt: #0,
            },
            kind: TsSymbolKeyword,
        },
    ),
    right: Interface(
        Interface {
            span: Span {
                lo: BytePos(
                    78,
                ),
                hi: BytePos(
                    84,
                ),
                ctxt: #0,
            },
            name: Atom('Symbol' type=static),
            type_params: None,
            extends: [],
            body: [
                Method(
                    MethodSignature {
                        span: Span {
                            lo: BytePos(
                                0,
                            ),
                            hi: BytePos(
                                0,
                            ),
                            ctxt: #0,
                        },
                        readonly: false,
                        key: Lit(
                            Str(
                                Str {
                                    span: Span {
                                        lo: BytePos(
                                            0,
                                        ),
                                        hi: BytePos(
                                            0,
                                        ),
                                        ctxt: #0,
                                    },
                                    value: Atom('toString' type=static),
                                    has_escape: false,
                                },
                            ),
                        ),
                        computed: false,
                        optional: false,
                        params: [],
                        ret_ty: Some(
                            Keyword(
                                TsKeywordType {
                                    span: Span {
                                        lo: BytePos(
                                            0,
                                        ),
                                        hi: BytePos(
                                            0,
                                        ),
                                        ctxt: #0,
                                    },
                                    kind: TsStringKeyword,
                                },
                            ),
                        ),
                        type_params: None,
                    },
                ),
                Method(
                    MethodSignature {
                        span: Span {
                            lo: BytePos(
                                0,
                            ),
                            hi: BytePos(
                                0,
                            ),
                            ctxt: #0,
                        },
                        readonly: false,
                        key: Lit(
                            Str(
                                Str {
                                    span: Span {
                                        lo: BytePos(
                                            0,
                                        ),
                                        hi: BytePos(
                                            0,
                                        ),
                                        ctxt: #0,
                                    },
                                    value: Atom('valueOf' type=inline),
                                    has_escape: false,
                                },
                            ),
                        ),
                        computed: false,
                        optional: false,
                        params: [],
                        ret_ty: Some(
                            Keyword(
                                TsKeywordType {
                                    span: Span {
                                        lo: BytePos(
                                            0,
                                        ),
                                        hi: BytePos(
                                            0,
                                        ),
                                        ctxt: #0,
                                    },
                                    kind: TsSymbolKeyword,
                                },
                            ),
                        ),
                        type_params: None,
                    },
                ),
            ],
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType15.ts:6:1
  |
6 | sym = symObj;
  | ^^^

